# aipatent-api

./: .gitignore  .mcp.json  .python-version  AGENTS.md  ALD_GvHD_patent_segments.csv  ALD_GvHD_patent_segments_labeled.csv  CLAUDE.md  LICENSE.md  Procfile  README.md  async_benchmark_patent_sections.py  benchmark-gpt5.py  conftest.py  extract_patent_sections.py  extract_patent_segments_to_csv.py  fetch_raw_sections.py  frontend-citation-guide.md  generate_sample_data.py  header_detection_json_exporter.py  header_detection_results.json  integration_summary_scores.py  label_all_chunks.py  label_all_chunks_concurrent.py  label_chunks_dataset.py  llama_parse_test.py  llama_parse_test_doc.py  main.py  make_patent_component.py  parse_pages_5_38.py  pdf_processing.py  plan.md  pyproject.toml  rag.py  rag_workflow.py  requirements.txt  simple_test.py  task.md  test_ald_patent_positions.py  test_api.py  test_covid_upload.py  (+9 more)
.claude/: settings.local.json
benchmarks/: async_generate_sections_to_csv.py  benchmark_patent_sections.py
docs/: LLAMA_PARSE.md  LLAMA_PARSE.md   comprehensive-analysis-endpoint-plan.md  comprehensive-analysis-endpoint.md  patent_draft_endpoints.md  schema.md
evals/: GVHD-ALD-papers-not-false.csv  GVHD-ALD-papers.csv  metrics.ipynb  retrieve_cleaned_data.ipynb  reviewed_chunks.csv  reviewed_chunks_not_false.csv  scoring_utils.py  synthetic_eval_cleaned_dataset.json  synthetic_eval_cleaned_gvhd_ald.json  synthetic_eval_dataset.json  synthetic_finetune_cleaned_dataset.jsonl  synthetic_finetune_cleaned_gvhd_ald.jsonl  synthetic_finetune_dataset.jsonl  (+1 more)
(+120 files in other folders)
